[gd_scene load_steps=17 format=3 uid="uid://bvtsy6olhwu07"]

[ext_resource type="Script" path="res://Enemies/enemy.gd" id="1_5631g"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_rtmjx"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="3_xo4y0"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="4_yce2q"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="5_o0j8t"]
[ext_resource type="Script" path="res://components/shake_component.gd" id="6_irv8h"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="7_3vcw1"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="8_doe5j"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="9_7xuwy"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="10_0l67b"]
[ext_resource type="PackedScene" uid="uid://h4lg8gu1wilx" path="res://effects/explosion_effect.tscn" id="11_od55i"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="12_ingqn"]
[ext_resource type="Script" path="res://components/score_component.gd" id="13_syvjr"]
[ext_resource type="Resource" uid="uid://b5qh0cqm2mpvn" path="res://game_stats.tres" id="14_3mywk"]
[ext_resource type="AudioStream" uid="uid://3upka0i4ubxv" path="res://sounds/hit_sound.wav" id="15_udp0l"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="16_7gsx2"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_5631g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_rtmjx")
actor = NodePath("..")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("3_xo4y0")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_yce2q")
sprite = NodePath("../AnimatedSprite2D")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("5_o0j8t")
sprite = NodePath("../AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("6_irv8h")
node = NodePath("../AnimatedSprite2D")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("7_3vcw1")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("8_doe5j")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("9_7xuwy")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("10_0l67b")
scene = ExtResource("11_od55i")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("12_ingqn")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../SpawnerComponent")

[node name="ScoreComponent" type="Node" parent="."]
script = ExtResource("13_syvjr")
game_stats = ExtResource("14_3mywk")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_udp0l")
volume_db = 5.0
bus = &"Sounds"
script = ExtResource("16_7gsx2")
